<resources>
    <string name="app_name">NbaNews</string>
    <string name="game_list">Игры</string>
    <string name="teams_table">Таблица</string>
    <string name="more">Ещё</string>

    <string name="summary">SUMMARY</string>
    <string name="box_score">BOX SCORE</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="pts">pts</string>
    <string name="rebound">rebound</string>
    <string name="assist">assist</string>
    <string name="error_data_loading">Не удалось загрузить данные</string>
    <string name="game_leaders">Game Leaders</string>
    <string name="point_category">ОЧКИ</string>
    <string name="rebound_category">ПОДБОРЫ</string>
    <string name="assist_category">ПЕРЕДАЧИ</string>
    <string name="field_goals">FIELD GOALS</string>
    <string name="three_pointers">3 POINTERS</string>
    <string name="free_throws">FREE THROWS</string>
    <string name="assists">ASSISTS</string>
    <string name="total_rebounds">TOTAL REBOUNDS</string>
    <string name="offensive_rebounds">OFFENSIVE REBOUNDS</string>
    <string name="defensive_rebounds">DEFENSIVE REBOUNDS</string>
    <string name="steals">STEALS</string>
    <string name="blocks">BLOCKS</string>
    <string name="turnovers">TURNOVERS</string>
    <string name="team_comparison">Team comparison</string>
    <string name="emptyGameList">На сегодняшний день игр нет</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select">Выбрать</string>
    <string name="yearFounded">Год основания: </string>
    <string name="roster">Состав</string>
    <string name="points">очк</string>
    <string name="rebounds">под</string>
    <string name="assist1">пер</string>
</resources>
